--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,5 +1,6 @@
 
 @import "../../variables.scss";
+@import "../../breakpoints.scss";
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400;500&display=swap');
 
 .homePage {
@@ -33,7 +34,7 @@
         }
         &__logoContainer {
             img {
-                transform: scale(1.7);
+                //transform: scale(1.7);
                 position: relative;
                 top:10px;
             }
@@ -41,6 +42,9 @@
         &__nav {
             display: flex;
             justify-content: space-between;
+            @include media("<=tablet") {
+                display:none;
+            }
             ul {
                 list-style: none;
                 text-decoration: none;
@@ -63,6 +67,7 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
+        padding-top:6vh;
         &__banner {
             padding:1em;
             color:white;
@@ -71,16 +76,19 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            //banner title
             h1 {
               font-size: 3.75rem;  //60px
               margin-bottom: 0.2em;
               font-weight: 400;
+              line-height: 100%;
             }
             p{
                 color:grey;
                 font-size: 1.5625rem;//25px
                 white-space: wrap;
                 margin-bottom:1.9em; //space between button and paragrah text
+                line-height: 103%;
             }
             &__button {
                 border-radius: 100px;
@@ -98,7 +106,9 @@
         }
         &__bannerImage {
             color:white;
-
+            @include media("<=tablet") {
+                display:none;
+            }
         }
     }
 }
