--- a/src/App.scss
+++ b/src/App.scss
@@ -3,10 +3,15 @@
 *,*::before,*::after {
   margin:0;
   padding:0;
+  box-sizing: border-box;
 }
 
 body,html {
   margin:0;
   padding: 0;
   overflow-x: hidden;
+}
+
+.icons {
+  font-size: 25px;
 }
