--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -14,10 +14,14 @@
     .header {
         width:100%;
         position: fixed;
+        z-index: 1000000;
         top:0;
         left:0;
         background-color: $bgcolor;
         padding-block: 1.5em;
+        @include media("<=tablet") {
+            padding-block: 0;
+        }
         font-size:1.4375rem;//24px;
         .header-content{
             margin-inline:auto;
@@ -27,16 +31,26 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            @include media("<=tablet"){
+                justify-content: start;
+                padding-inline: 0;
+            }
         }
         // make all direct descendents section elements of home page bg color black
         & > section {
             background-color: $bgcolor;
+            z-index:-1;
+            display: inline-block;
         }
+        //the big tedx logo in the header
         &__logoContainer {
             img {
                 //transform: scale(1.7);
                 position: relative;
                 top:10px;
+                @include media("<=tablet") {
+                    transform: scale(0.6);
+                }
             }
         }
         &__nav {
@@ -67,7 +81,7 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
-        padding-top:6vh;
+        padding-top:10vh; // shift from the top
         &__banner {
             padding:1em;
             color:white;
@@ -82,6 +96,9 @@
               margin-bottom: 0.2em;
               font-weight: 400;
               line-height: 100%;
+              @include media("<=tablet") {
+                font-size:4.5rem;
+              }
             }
             p{
                 color:grey;
@@ -89,25 +106,124 @@
                 white-space: wrap;
                 margin-bottom:1.9em; //space between button and paragrah text
                 line-height: 103%;
+                @include media("<=tablet") {
+                    font-size:1rem;
+                }
             }
             &__button {
                 border-radius: 100px;
-                border: 1px solid red;
+                border: 1.8px solid red;
                 color:red;
                 height:8px;
                 width:140px;
                 font-size: 1rem;
-                padding:1em;
+                padding:1.3em 5.6em;
                 white-space: nowrap;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                &:hover {
+                    background-color:red;
+                    // font-size: 1.1rem;
+                    color:$bgcolor;
+                    cursor:pointer;
+                }
             }
         }
         &__bannerImage {
             color:white;
             @include media("<=tablet") {
                 display:none;
+            }
+        }
+    }
+    // The upcoming events section 
+    .upcoming {
+        padding-inline: 10px;
+        display:flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: column;
+        color:white;
+        text-align: center;
+        width:100%;
+        height:100vh;
+        overflow-y: hidden;
+        h1 {
+            @include media("<=tablet"){
+                display:none;
+            }
+            font-weight: 500;
+            line-height: 1.2;
+            font-size: 3.1875rem;
+            margin-bottom: 0em;
+        }
+        .upcoming-flexContainer {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            width:100%;
+            @include media("<=tablet") {
+                flex-direction: column;
+            }
+        }
+        &__info {
+            width:50%;
+            @include media("<=tablet"){
+                width:85%;
+            }
+            text-align: justify;
+            color:grey;
+            h3 {
+                color:white;
+                margin-bottom: 3px;
+            }
+            p{
+            }
+            footer {
+                color:white;
+                margin-top: 30px;
+                width: 100%;
+                display:flex;
+                justify-content: space-between;
+                align-items: center;
+                //flex-wrap: wrap;
+                @include media("<=tablet"){
+                    flex-direction: column;
+                    justify-content: flex-start;
+                }
+                .footer-info{
+                    display: flex;
+                    align-items: center;
+                    justify-content: flex-start;
+                    width: 100%;
+                    p{
+                        white-space: nowrap; 
+                        margin-inline:20px;
+                     }
+                }
+               
+            }
+            &__registerBtn{
+                @include media("<=tablet") {
+                    margin-top:2em;
+                }
+                border-radius: 100px;
+                border: 2px solid red;
+                padding: 0.3em 3em;
+                height:45px;
+                &:hover {
+                    background-color: red;
+                    color:$bgcolor;
+                }
+            }
+        }
+        &__imageContainer{
+            img {
+                transform: scale(1.3);
+            }
+            @include media("<=tablet") {
+                margin-bottom: 2.5em;
             }
         }
     }
