--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -41,6 +41,7 @@ $blog_breakpoint: "<=1366px";
             background-color: $bgcolor;
             z-index:-1;
             display: inline-block;
+            overflow-x: hidden;
         }
         //the big tedx logo in the header
         &__logoContainer {
@@ -148,7 +149,7 @@ $blog_breakpoint: "<=1366px";
         text-align: center;
         width:100%;
         height:100vh;
-        overflow-y: hidden;
+        overflow: hidden;
         h1 {
             @include media("<=tablet"){
                 display:none;
@@ -224,17 +225,24 @@ $blog_breakpoint: "<=1366px";
             }
             @include media("<=tablet") {
                 margin-bottom: 2.5em;
+                transform: scale(0.6)
             }
         }
     }
     //blogs Container and stuff
+    .blogs_title{
+        text-align: center;
+        color:white;
+        font-size:2.5rem;
+        font-weight: 400;
+    }
     .blogs {
         display: flex;
         justify-content: space-between;
         align-items: center;
         width:100vw;
         height:100vh;
-        overflow-y: hidden;
+        overflow: hidden;
         position: relative;
         @include media("<=desktop") {
             flex-direction: column;
@@ -284,13 +292,16 @@ $blog_breakpoint: "<=1366px";
                 font-size:2.8rem;
                 font-weight: 400;
                 @include media("<=desktop") {
-                    font-size:2rem;
+                    display: none;
                 }
             }
             p{
                 color:grey;
                 font-size:1.7rem;
                 text-align: center;
+                @include media("<=desktop"){
+                    display: none;
+                }
             }
             &__readBlog {
                 margin-top:3em;
@@ -300,7 +311,59 @@ $blog_breakpoint: "<=1366px";
                 p{
                     color:red;
                     font-size:1rem;
+                    @include media("<=desktop"){
+                        display: block;
+                        white-space: nowrap;
+                        font-size: 1rem;
+                    }
                 }
+            }
+        }
+    }
+    .footer {
+        padding:1em 0;
+        height:120vh;
+        width:100vw;
+        color:white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .footer-grid {
+            width:80%;
+            display: grid;
+            grid-template-columns: repeat(4,1fr);
+            column-gap: 30px;
+            @include media($blog_breakpoint){
+                grid-template-columns: 1fr;
+                column-gap: 0px;
+                row-gap: 30px;
+            }
+            &__image {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                transform: scale(1.2);
+            }
+            &__chapter{
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+                &:last-child{
+                    justify-content: flex-start;
+                }
+                &__title {
+                    color:red;
+                    font-size: 1.5rem;
+                    font-weight: 800;
+                }
+                &__items {
+                    padding:5px 30px;
+                    &:hover {
+                        border: 1px solid yellow;
+                    }
+                }
+
             }
         }
     }
